# info502_VR

./: .gitignore  README.md  Shadow_Creatures_Report_Draft.md  build-shadow-creatures.ps1
scene_shadow_creatures3/: CMakeLists.txt
scene_shadow_creatures3/ShadowCreatures/: .gitignore  CMakeLists.txt
scene_shadow_creatures3/ShadowCreatures/shaders/: shadow_creature.frag  shadow_creature.vert  shadow_map.frag  shadow_map.vert  skybox.frag  skybox.vert
scene_shadow_creatures3/ShadowCreatures/src/: AILightController.cpp  AILightController.h  Camera.cpp  Camera.h  LoadedModel.cpp  LoadedModel.h  Scene.h  Shader.h  ShadowCreature.cpp  ShadowCreature.h  main.cpp
